<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".About">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/about_me"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/about_photo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/author"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/name_author"
        android:layout_marginTop="16dp"
        android:textSize="22dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_author"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textSize="14dp"
        android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>